Feat: add confirm register and add swagger and add testcase
