# app/routes/user.routes.js
@@ -7,7 +7,7 @@ module.exports = (app) => {
   // Create a new Node
   app.post("/register", controller.register);
   // Confirm Register
-  app.post("/confirmregister/:token", controller.confirmRegister);
+  app.get("/confirmregister/:token", controller.confirmRegister);
   // Post login
   app.post("/login", controller.login);
   // Post forgetpassword
